compiler/src/test/resources/golden/errors/lambda_uninferrable_param.dawn
fn f() -> Int = {
  let g = fn(x) => x
  3
}
