compiler/src/test/resources/golden/errors/lambda_uninferrable_param.err
error: cannot infer the type of `x`
  --> lambda_uninferrable_param.dawn:2:14
  |
2 |   let g = fn(x) => x
  |              ^
  = hint: annotate it: fn(x: Int) => ...
